--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,8 +10,8 @@ env:
   DOCKER_HOST: ssh://${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }}
 
 jobs:
-  publish:
-    name: publish image
+  build:
+    name: build
     runs-on: ubuntu-latest
 
     steps:
@@ -29,7 +29,7 @@ jobs:
         docker build . --tag ${{ env.IMAGE_NAME }}
 
   deploy:
-    needs: publish
+    needs: build
     name: deploy image
     runs-on: ubuntu-latest
 
