--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,7 +10,7 @@ env:
   DOCKER_HOST: ssh://${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }}
 
 jobs:
-  build:
+  build_and_deploy:
     name: build
     runs-on: ubuntu-latest
 
@@ -27,18 +27,6 @@ jobs:
     - name: Build and Publish
       run: |
         docker build . --tag ${{ env.IMAGE_NAME }}
-
-  deploy:
-    needs: build
-    name: deploy image
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: install ssh keys
-      run: |
-        install -m 600 -D /dev/null ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -p ${{ secrets.SSH_PORT }} -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
     - name: down & up
       run: ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && docker compose down && docker compose up -d && exit"
     - name: cleanup
