--- a/.github/workflows/deploy-raspberypi.yml
+++ b/.github/workflows/deploy-raspberypi.yml
@@ -10,7 +10,7 @@ env:
   DOCKER_HOST: ssh://${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }}
 
 jobs:
-  build_and_deploy:
+  deploy:
     name: build
     runs-on: ubuntu-latest
 
@@ -21,13 +21,10 @@ jobs:
         install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -p ${{ secrets.SSH_PORT }} -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
-    - name: Login
-      run: |
-        echo ${{ secrets.PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Build and Publish
       run: |
         docker build . --tag ${{ env.IMAGE_NAME }}
-    - name: down & up
-      run: ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && docker compose down && docker compose up -d && exit"
+    - name: pull & build & up
+      run: ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git pull && docker compose up -d --build && exit"
     - name: cleanup
       run: rm -rf ~/.ssh
