--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   backend:
     container_name: lyrics-ide-backend
+    restart: always
     build: .
     ports:
       - 0.0.0.0:20240:80
