--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -42,4 +42,4 @@ jobs:
 
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f ./k8s/manifests/
+          kubectl apply -f /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/k8s/manifests/
