--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -18,6 +18,9 @@ jobs:
       - name: List directory contents
         run: ls -la
 
+      - name: List manifest directory contents
+        run: ls -la /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/k8s/manifests/
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -27,13 +30,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: samplec0de/lyrics-ide-backend:latest
+#      - name: Build and push Docker image
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile
+#          push: true
+#          tags: samplec0de/lyrics-ide-backend:latest
 
       - name: Set up Kubeconfig
         uses: azure/setup-kubectl@v1
