--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -18,6 +18,15 @@ jobs:
       - name: List directory contents
         run: ls -la
 
+      - name: List pre project directory contents
+        run: ls -la /home/runner/work/lyrics-ide-backend/
+
+      - name: List project directory contents
+        run: ls -la /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/
+
+      - name: List k8s directory contents
+        run: ls -la /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/k8s/
+
       - name: List manifest directory contents
         run: ls -la /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/k8s/manifests/
 
