--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -12,21 +12,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Print working directory
-        run: pwd
-
-      - name: List directory contents
-        run: ls -la
-
-      - name: List pre project directory contents
-        run: ls -la /home/runner/work/lyrics-ide-backend/
-
-      - name: List project directory contents
-        run: ls -la /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/
-
-      - name: List k8s directory contents
-        run: ls -la /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/k8s/
-
       - name: List manifest directory contents
         run: ls -la /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/k8s/manifests/
 
@@ -39,13 +24,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-#      - name: Build and push Docker image
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          file: ./Dockerfile
-#          push: true
-#          tags: samplec0de/lyrics-ide-backend:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: samplec0de/lyrics-ide-backend:latest
 
       - name: Set up Kubeconfig
         uses: azure/setup-kubectl@v1
