--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -24,18 +24,23 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: samplec0de/lyrics-ide-backend:latest
+#      - name: Build and push Docker image
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile
+#          push: true
+#          tags: samplec0de/lyrics-ide-backend:latest
+
+#      - name: Set up Kubeconfig
+#        uses: azure/setup-kubectl@v1
+#        with:
+#          kubeconfig: ${{ secrets.KUBE_CONFIG_DATA }}
 
       - name: Set up Kubeconfig
-        uses: azure/setup-kubectl@v1
-        with:
-          kubeconfig: ${{ secrets.KUBE_CONFIG_DATA }}
+        run: |
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > ./kubeconfig
+          export KUBECONFIG=$PWD/kubeconfig
 
       - name: Deploy to Kubernetes
         run: |
