[1.0.3] Исправлено отображение списка текстов при удалении музыки из проекта

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -30,7 +30,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: samplec0de/lyrics-ide-backend:latest
+          tags: samplec0de/lyrics-ide-backend:1.0.3
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
