--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -51,9 +51,10 @@ jobs:
         run: |
           cd /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/app
 
-      - name: Check python
+      - name: Install dependencies
         run: |
-          python3 --version
+          python3 -m pip install asyncpg==0.29.0 SQLAlchemy==2.0.25 alembic==1.13.1
+
 
 #  deploy:
 #    runs-on: ubuntu-latest
