[WIP] Миграции в CI/CD

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Port-forward to database
         run: |
-          kubectl port-forward -n lyrics-ide service/lyrics-postgresql 15432:5432 &
+          kubectl port-forward -n lyrics-ide service/lyrics-postgresql 5432:5432 &
 
       - name: Change directory to app
         run: |
@@ -54,6 +54,10 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install asyncpg==0.29.0 SQLAlchemy==2.0.25 alembic==1.13.1
+
+      - name: Run database migrations
+        run: |
+          alembic upgrade head
 
 
 #  deploy:
