[WIP] Миграции в CI/CD

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Run database migrations
         run: |
-          alembic upgrade head
+          pwd && alembic upgrade head
 
 
 #  deploy:
