--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -6,34 +6,34 @@ on:
       - main
 
 jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v3
-#
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-#
-#      - name: Build and push Docker image
-#        uses: docker/build-push-action@v5
-#        with:
-#          context: .
-#          file: ./Dockerfile
-#          push: true
-#          tags: samplec0de/lyrics-ide-backend:${{ github.sha }}
-#          cache-from: type=gha
-#          cache-to: type=gha,mode=max
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: samplec0de/lyrics-ide-backend:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   migrate-database:
     runs-on: ubuntu-latest
-#    needs: [build]
+    needs: [build]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -56,23 +56,22 @@ jobs:
         run: |
           DATABASE_URL=${{ secrets.DATABASE_URL }} alembic upgrade head
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build, migrate-database]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs: [build]
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Render Kubernetes manifest
-#        run: |
-#          sed -i 's|samplec0de/lyrics-ide-backend:latest|samplec0de/lyrics-ide-backend:${{ github.sha }}|' ./k8s/manifests/backend.yaml
-#
-#      - name: Set up Kubectl
-#        uses: azure/k8s-set-context@v4
-#        with:
-#          kubeconfig: ${{ secrets.KUBE_CONFIG_DATA }}
-#
-#      - name: Deploy to Kubernetes
-#        run: |
-#          kubectl apply -f /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/k8s/manifests/
+      - name: Render Kubernetes manifest
+        run: |
+          sed -i 's|samplec0de/lyrics-ide-backend:latest|samplec0de/lyrics-ide-backend:${{ github.sha }}|' ./k8s/manifests/backend.yaml
+
+      - name: Set up Kubectl
+        uses: azure/k8s-set-context@v4
+        with:
+          kubeconfig: ${{ secrets.KUBE_CONFIG_DATA }}
+
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl apply -f /home/runner/work/lyrics-ide-backend/lyrics-ide-backend/k8s/manifests/
