nginx.ingress.kubernetes.io/proxy‑read‑timeout: "360"

--- a/k8s/manifests/backend-ingress.yaml
+++ b/k8s/manifests/backend-ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/proxy-body-size: "128m"
+    nginx.ingress.kubernetes.io/proxy‑read‑timeout: "360"
 spec:
   tls:
   - hosts:
