ci/cd: install requirements

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -Ur requirements.txt -Ur requirements.tests.txt
           pip install pytest pytest-cov
 
       - name: Run integration tests with coverage
