--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
@@ -56,6 +57,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
@@ -91,6 +93,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: [unit-tests, integration-tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
