--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -91,6 +91,68 @@ jobs:
           DATABASE_URL=sqlite+aiosqlite:///:memory:
           pytest . --cov=app --cov-report=xml:coverage-integration.xml
 
+    merge-coverage:
+    runs-on: ubuntu-latest
+    needs: [unit-tests, integration-tests]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install coverage
+        run: |
+          pip install coverage
+
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+
+      - name: Merge coverage reports
+        run: |
+          coverage combine coverage-unit.xml coverage-integration.xml
+          coverage report
+          coverage xml -o coverage-combined.xml
+
+      - name: Upload combined coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage-combined.xml
+          fail_ci_if_error: true
+
+  merge-coverage:
+    runs-on: ubuntu-latest
+    needs: [unit-tests, integration-tests]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install coverage
+        run: |
+          pip install coverage
+
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+
+      - name: Merge coverage reports
+        run: |
+          coverage combine coverage-unit.xml coverage-integration.xml
+          coverage report
+          coverage xml -o coverage-combined.xml
+
+      - name: Upload combined coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage-combined.xml
+          fail_ci_if_error: true
+
   build:
     runs-on: ubuntu-latest
     needs: [unit-tests, integration-tests]
