--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -121,13 +121,13 @@ jobs:
         run: |
           pip install coverage
 
-      - name: Download coverage reports
+      - name: Download coverage report (unit)
         uses: actions/download-artifact@v4
         with:
           name: unit-test-coverage
           path: .
 
-      - name: Download coverage reports
+      - name: Download coverage report (integration)
         uses: actions/download-artifact@v4
         with:
           name: integration-test-coverage
