--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -45,13 +45,17 @@ jobs:
           cd tests/unit_tests
           PYTHONPATH="../:$PYTHONPATH"
           DATABASE_URL=sqlite+aiosqlite:///:memory:
-          pytest . --cov=app --cov-report=xml:coverage-unit.xml
+          pytest . --cov=app --cov-report=term
+
+      - name: Rename coverage data file
+        run: |
+          mv .coverage .coverage-unit
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
           name: unit-test-coverage
-          path: tests/unit_tests/coverage-unit.xml
+          path: tests/unit_tests/.coverage-unit
 
 
   integration-tests:
@@ -96,13 +100,17 @@ jobs:
           cd tests/integration_tests
           PYTHONPATH="../:$PYTHONPATH"
           DATABASE_URL=sqlite+aiosqlite:///:memory:
-          pytest . --cov=app --cov-report=xml:coverage-integration.xml
+          pytest . --cov=app --cov-report=term
+
+      - name: Rename coverage data file
+        run: |
+          mv .coverage .coverage-integration
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
           name: integration-test-coverage
-          path: tests/integration_tests/coverage-integration.xml
+          path: tests/integration_tests/.coverage-integration
 
 
   merge-coverage:
@@ -136,7 +144,7 @@ jobs:
 
       - name: Merge coverage reports
         run: |
-          coverage combine coverage-unit.xml coverage-integration.xml
+          coverage combine .coverage-unit .coverage-integration
           coverage report
           coverage xml -o coverage-combined.xml
 
