--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -45,11 +45,7 @@ jobs:
           cd tests/unit_tests
           PYTHONPATH="../:$PYTHONPATH"
           DATABASE_URL=sqlite+aiosqlite:///:memory:
-          pytest . --cov=app --cov-report=term
-
-      - name: Rename coverage data file
-        run: |
-          mv .coverage .coverage-unit
+          pytest . --cov=app --data-file=.coverage-unit --cov-report=term
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
@@ -100,11 +96,7 @@ jobs:
           cd tests/integration_tests
           PYTHONPATH="../:$PYTHONPATH"
           DATABASE_URL=sqlite+aiosqlite:///:memory:
-          pytest . --cov=app --cov-report=term
-
-      - name: Rename coverage data file
-        run: |
-          mv .coverage .coverage-integration
+          pytest . --cov=app --data-file .coverage-integration --cov-report=term
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
