--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -45,7 +45,11 @@ jobs:
           cd tests/unit_tests
           PYTHONPATH="../:$PYTHONPATH"
           DATABASE_URL=sqlite+aiosqlite:///:memory:
-          pytest . --cov=app --data-file=.coverage-unit --cov-report=term
+          pytest . --cov=app --cov-report=term
+
+      - name: Rename coverage data file
+        run: |
+          mv tests/unit_tests/.coverage tests/unit_tests/.coverage-unit
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
@@ -96,7 +100,11 @@ jobs:
           cd tests/integration_tests
           PYTHONPATH="../:$PYTHONPATH"
           DATABASE_URL=sqlite+aiosqlite:///:memory:
-          pytest . --cov=app --data-file .coverage-integration --cov-report=term
+          pytest . --cov=app --cov-report=term
+
+      - name: Rename coverage data file
+        run: |
+          mv tests/integration_tests/.coverage tests/integration_tests/.coverage-integration
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
