--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -116,6 +116,7 @@ jobs:
   merge-coverage:
     runs-on: ubuntu-latest
     needs: [unit-tests, integration-tests]
+    coverage:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -148,11 +149,12 @@ jobs:
           coverage report
           coverage xml -o coverage-combined.xml
 
-      - name: Upload combined coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
         with:
-          file: ./coverage-combined.xml
-          fail_ci_if_error: true
+          name: coverage-combined
+          path: coverage-combined.xml
+
 
   build:
     runs-on: ubuntu-latest
