[1.33.0] При поиске значения слова добавляются нормальные формы всех значений этого слова

--- a/mypy.ini
+++ b/mypy.ini
@@ -11,3 +11,6 @@ ignore_missing_imports = True
 
 [mypy-ffmpeg.*]
 ignore_missing_imports = True
+
+[mypy-pymorphy3.*]
+ignore_missing_imports = True
